    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
*** DONE add a pause after recognition mode training before next key
    - State "DONE"       from "TODO"       [2011-03-02 Wed 14:47]
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-03-02 Wed 14:47
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:

* Version: 0.5.1
*** DONE A makerelease packaging script.
* Version: 0.5
*** DONE Use programmed screens instead of qtdesigner screens to get around maemo bugs
*** DONE Rewrite the letter training mode to be purely based on percentage and not time
*** DONE Add a graph widget to indicate training progress
*** DONE improve the probability for bad letters in recognition mode
***** Example case with L good letters and 1 bad one:
      + P = percent correct of the "bad" letter (eg, 50)
      + L = # of letters at O%
      + O = percent correct of the good letter (eg, 100)
      + T = target probability (eg, .5)
      + N = magic constant

***** probability calculation:
      t=(n-p)/(l*n-lo+n-p)

***** solved for N
      n = ((p+lo)*t-p)/((l+1)*t-1) 

      Note: fails at l = 1 with inf/inf

***** Values for N given L
      |----+------------------|
      |  L |                N |
      |----+------------------|
      |  2 |              150 |
      |  3 |              125 |
      |  4 | 116.666666666667 |
      |  5 |            112.5 |
      |  6 |              110 |
      |  7 | 108.333333333333 |
      |  8 | 107.142857142857 |
      |  9 |           106.25 |
      | 10 | 105.555555555556 |
      | 26 |              102 |
      |----+------------------|

***** Plotting the probability graph with gnuplot

      plot [0:100] f(p)=(n-p)/((l*n-l*o) + n - p), n=102, l=26, o=100, f(x)

      change the top percent:

      plot [0:100] f(p)=(n-p)/((l*n-l*o) + n - p), n=102, l=26, o=100, f(x) title "100", o=90, f(x) title "90", o=80, f(x) title "80", o=70, f(x) title "70"