@@ -63,6 +63,15 @@
     :ARCHIVE_CATEGORY: TODO
     :ARCHIVE_TODO: DONE
     :END:
+*** DONE add a starting slightly slower speed to speed training
+    - State "DONE"       from "TODO"       [2011-03-02 Wed 15:06]
+    :PROPERTIES:
+    :ARCHIVE_TIME: 2011-03-02 Wed 15:06
+    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
+    :ARCHIVE_OLPATH: The TODO list
+    :ARCHIVE_CATEGORY: TODO
+    :ARCHIVE_TODO: DONE
+    :END:
 
 * Version: 0.5.1
 *** DONE A makerelease packaging script.
